# green_optimizer

./: Cargo.toml  LICENCE  README.md
dummy_data/: index.html  index.min.html
src/: css_analyzer.rs  html_manager.rs  html_minifier.rs  image_converter.rs  main.rs  output.rs  resource_extractor.rs  url_resolver.rs
