[package]
name = "green_optimizer"
version = "0.1.0"
edition = "2024"
authors = ["Équipe Bon"]
license = "GNU GPL V3"
description = "Outil d'audit écologique pour pages web"
repository = "https://github.com/Vroum1/green_optimizer"


[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.12.24"
scraper = "0.24.0"
url = "2.5.7"
regex = "1.12.2"
colored = "2"
minify-html = "0.18.1"
webp = "0.3"
image = "0.25"